fixed the overlapping images and finished project!

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,6 +23,7 @@ body {
   width: 200px;
   height: 200px;
   position: absolute;
+  top: 350px;
 }
 
 #fired {
@@ -30,6 +31,7 @@ body {
   height: 200px;
   display: none;
   position: absolute;
+  top: 350px;
 }
 
 #arrow {
@@ -37,4 +39,5 @@ body {
   height: 150px;
   display: none;
   position: absolute;
+  top: 350px;
 }
